# RusToktest

./: .architecture_progress  .changes-summary.md  .gitignore  AGENTS.md  ARCHITECTURE_IMPROVEMENT_PLAN.md  ARCHITECTURE_REVIEW_INDEX.md  ARCHITECTURE_REVIEW_START_HERE.md  ARCHITECTURE_STATUS.md  CHANGELOG.md  CODE_AUDIT_REPORT_2026-02-11.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_SUMMARY.md  Makefile  NEXT_STEPS_PLAN.md  PLATFORM_INFO_RU.md  PROGRESS_TRACKER.md  PROPERTY_BASED_TESTS_TASK_SUMMARY.md  QUICKSTART.md  README.md  README.ru.md  README_ADDITION.md  ROADMAP.md  RUSTOK_MANIFEST.md  RUSTON_MANIFEST.md  SESSION_SUMMARY_2026-02-11_AUDIT.md  SPRINT_3_PROGRESS.md  SPRINT_3_TASK_3.1_COMPLETE.md  SPRINT_4_COMPLETED.md  TECHNICAL_ARTICLE.md  convert_logo.js  deny.toml  docker-compose.yml  modules.toml  package.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  dependencies.yml
DECISIONS/: 2026-02-19-module-kind-core-vs-optional.md  2026-05-22-module-lifecycle-hook-phases-and-retry-contract.md  README.md
IU/docs/: README.md
IU/tokens/: README.md
apps/admin/: Cargo.toml  README.md
apps/mcp/: Cargo.toml
apps/next-admin/: README.md  middleware.ts  package-lock.json  package.json  tsconfig.json
apps/server/: Cargo.toml  (+1 more)
benches/: Cargo.toml
crates/leptos-auth/: Cargo.toml  README.md
crates/leptos-auth/docs/: implementation-plan.md
crates/leptos-auth/src/: api.rs  components.rs  context.rs  hooks.rs
crates/rustok-api/: Cargo.toml
crates/rustok-api/docs/: implementation-plan.md
crates/rustok-api/src/: manifest_hash.rs  route_selection.rs
crates/rustok-commerce/: Cargo.toml  README.md
crates/rustok-commerce/admin/: Cargo.toml  README.md
crates/rustok-commerce/admin/src/: api.rs  lib.rs
crates/rustok-commerce/admin/src/core/: mod.rs
crates/rustok-commerce/admin/src/transport/: mod.rs
crates/rustok-commerce/docs/: README.md  implementation-plan.md
crates/rustok-commerce/src/: error.rs  lib.rs  state_machine.rs  state_machine_proptest.rs  storefront_channel.rs
crates/rustok-commerce/src/controllers/: admin.rs  store.rs
crates/rustok-commerce/src/entities/: mod.rs  price.rs  product.rs  product_image.rs  product_option.rs  product_variant.rs
crates/rustok-commerce/src/graphql/: mutation.rs  query.rs  types.rs
crates/rustok-commerce/src/services/: catalog.rs  checkout.rs  inventory.rs  mod.rs  post_order.rs  pricing.rs  product_service.rs  shipping_profile.rs
crates/rustok-commerce/storefront/: Cargo.toml  README.md
crates/rustok-commerce/storefront/src/: api.rs  lib.rs  model.rs
crates/rustok-commerce/storefront/src/core/: mod.rs  presentation.rs  requests.rs
crates/rustok-commerce/storefront/src/transport/: graphql_adapter.rs  mod.rs  native_server_adapter.rs
crates/rustok-commerce/storefront/src/ui/leptos/: mod.rs
crates/rustok-commerce/tests/: catalog_service_test.rs  checkout_service_test.rs  contract_surface.rs  graphql_runtime_parity_test.rs  integration.rs  inventory_service_test.rs  order_returns_bridge_test.rs  pricing_service_test.rs  product_event_index_integration_test.rs  support.rs
crates/rustok-forum/: Cargo.toml  README.md
crates/rustok-forum/admin/: README.md
crates/rustok-forum/admin/src/: core.rs
crates/rustok-forum/admin/src/ui/: leptos.rs
crates/rustok-forum/docs/: implementation-plan.md
crates/rustok-forum/src/: constants.rs  error.rs  lib.rs
crates/rustok-forum/src/dto/: category.rs  mod.rs  reply.rs  topic.rs
crates/rustok-forum/src/entities/: mod.rs
crates/rustok-forum/src/services/: category.rs  mod.rs  moderation.rs  reply.rs  topic.rs
crates/rustok-forum/tests/: integration.rs  unit.rs
crates/rustok-mcp/: CRATE_API.md  Cargo.toml  README.md
crates/rustok-mcp/docs/: README.md  implementation-plan.md
crates/rustok-mcp/src/: lib.rs  server.rs  tools.rs
crates/rustok-mcp/tests/: tools.rs
crates/rustok-order/storefront/: Cargo.toml  README.md
crates/rustok-order/storefront/src/: core.rs  lib.rs  transport.rs
crates/rustok-order/storefront/src/ui/: leptos.rs  mod.rs
crates/rustok-pages/: Cargo.toml  rustok-module.toml
crates/rustok-pages/admin/: README.md
crates/rustok-pages/admin/src/: core.rs  lib.rs
crates/rustok-pages/admin/src/ui/: leptos.rs
crates/rustok-pages/docs/: implementation-plan.md
crates/rustok-pages/src/: error.rs  lib.rs
crates/rustok-pages/src/dto/: block.rs  mod.rs
crates/rustok-pages/src/services/: block.rs  menu.rs  page.rs
crates/rustok-pages/storefront/src/: core.rs  lib.rs
crates/rustok-pages/tests/: contract_surface.rs  integration.rs  page_service_kind_guard.rs
crates/rustok-payment/: Cargo.toml
crates/rustok-payment/docs/: implementation-plan.md
crates/rustok-payment/src/services/: payment.rs
crates/rustok-payment/storefront/: Cargo.toml
crates/rustok-payment/storefront/src/: core.rs  transport.rs
crates/rustok-payment/tests/: payment_service_test.rs  support.rs
docs/: ALLOY_MANIFEST.md  ARCHITECTURE_GUIDE.md  ARCHITECTURE_REVIEW_SUMMARY.md  BENCHMARKS_GUIDE.md  CODE_QUALITY_STANDARDS.md  CORE_STABILIZATION_RECOMMENDATIONS.md  DATABASE_SCHEMA.md  DOCS_MAP.md  ERROR_HANDLING_POLICY.md  IMMEDIATE_ACTIONS.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  INSTRUMENTATION_EXAMPLES.md  MANIFEST_ADDENDUM.md  OPENTELEMETRY_INTEGRATION.md  PLATFORM_VERIFICATION_PLAN.md  PROPERTY_BASED_TESTS_GUIDE.md  QUICK_START.md  REDIS_CIRCUIT_BREAKER.md  REFACTORING_ROADMAP.md  REVIEW_ACTION_CHECKLIST.md  REVIEW_SUMMARY.md  ROADMAP.md  SPRINT_1_COMPLETION.md  TENANT_RESOLVER_V2_MIGRATION.md  admin-auth-phase3.md  admin-libraries-parity.md  admin-migration-checklist.md  admin-phase3-architecture.md  admin-phase3-gap-analysis.md  admin-review-improvement-plan.md  alloy-concept.md  architecture.md  grafana-setup.md  index.md  modules.md  phase2-users-vertical-slice.md  storefront.md  structured-logging.md  tech-parity.md  (+3 more)
rustok_mobile/: README.md  pubspec.yaml
scripts/: loco_upstream_snapshot.py  rbac_cutover_baseline.sh  rbac_cutover_gate.sh
(+740 files in other folders)
