[package]
name = "leptos-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
leptos = { workspace = true }
leptos_router = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
gloo-storage = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["Window", "Storage", "Request", "RequestInit", "RequestMode", "Response", "Headers"] }
