[package]
name = "leptos-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
leptos = { workspace = true }
leptos_router = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
gloo-storage = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["json"] }
