[package]
name = "rustok-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared RusToK web/API contracts for server adapters and module-facing GraphQL/HTTP integration"

[features]
default = []
server = [
  "dep:async-graphql",
  "dep:axum",
  "dep:rustok-core",
  "dep:rustok-tenant",
  "dep:sea-orm",
]
loco-adapter = ["server", "dep:loco-rs", "dep:rustok-outbox"]

[dependencies]
async-graphql = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
base64.workspace = true
loco-rs = { workspace = true, optional = true }
rustok-core = { workspace = true, optional = true }
rustok-tenant = { workspace = true, optional = true }
rustok-outbox = { workspace = true, optional = true }
sea-orm = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
