[package]
name = "rustok-forum"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
utoipa.workspace = true
thiserror.workspace = true
tracing.workspace = true

rustok-core.workspace = true
rustok-content.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
