[package]
name = "rustok-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "MCP adapter server for RusToK modules"

[dependencies]
anyhow.workspace = true
rmcp = "0.8.0"
serde.workspace = true
schemars = "0.8"
tokio.workspace = true
rustok-core.workspace = true
