[package]
name = "rustok-order-storefront"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Leptos storefront UI package for the rustok-order module"

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr"]

[dependencies]
leptos.workspace = true
